[package]
edition = "2018"
name = "v8"
version = "0.10.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "High-level bindings to V8, the Javascript engine"
homepage = "https://dflemstr.github.io/v8-rs"
documentation = "https://dflemstr.github.io/v8-rs/v8/index.html"
keywords = ["v8", "javascript", "js", "ecmascript", "google"]
license = "Apache-2.0"
repository = "https://github.com/dflemstr/v8-rs"
[dependencies.failure]
version = "0.1.5"

[dependencies.lazy_static]
version = "1.2.0"

[dependencies.num_cpus]
version = "1.9.0"

[dependencies.v8-sys]
path = "v8-sys"
version = "0.15.0"

[features]
shared = ["v8-sys/shared"]
