[package]
edition = "2018"
name = "v8-api"
version = "0.8.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "A parser for v8.h files to extract a description of the V8 API heuristically.  Used in build scripts, for example in v8-sys."
homepage = "https://dflemstr.github.io/v8-rs"
keywords = ["v8", "javascript", "api"]
license = "Apache-2.0"
repository = "https://github.com/dflemstr/v8-rs/tree/master/v8-api"
[dependencies.clang]
version = "0.15.0"
features = ["clang_3_5", "runtime"]

[dependencies.env_logger]
version = "0.6.0"

[dependencies.log]
version = "0.4.6"
